--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -198,13 +198,13 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/purchaseBtn"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="65dp"
             android:layout_marginHorizontal="40dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/orange_bg"
+            android:backgroundTint="#E96614"
             android:fontFamily="@font/montserrat_extrabold"
             android:text="@string/buy_bundle_btn_label"
             android:textColor="@color/white"
