--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -116,17 +116,17 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.03" />
 
-                <androidx.appcompat.widget.AppCompatButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/saveBtn"
                     android:layout_width="0dp"
-                    android:layout_height="55dp"
+                    android:layout_height="63dp"
                     android:layout_weight="0.5"
-                    android:background="@drawable/orange_bg"
                     android:fontFamily="@font/montserrat_medium"
                     android:text="@string/save_btn_label"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="13sp" />
+                    android:textSize="13sp"
+                    android:backgroundTint="#E96614"/>
 
             </LinearLayout>
         </LinearLayout>
