--- a/app/src/main/res/xml/network_traffic_config.xml
+++ b/app/src/main/res/xml/network_traffic_config.xml
@@ -4,6 +4,7 @@
         <domain includeSubdomains="true">apigray.mobiblanc.com</domain>
         <domain includeSubdomains="true">web.gray.mobiblanc.com</domain>
         <domain includeSubdomains="true">webgray.mobiblanc.com</domain>
+        <domain includeSubdomains="true">www.orimi.com</domain>
     </domain-config>
     <base-config cleartextTrafficPermitted="false">
         <trust-anchors>
