--- a/app/src/main/res/drawable/selected_bundle_background.xml
+++ b/app/src/main/res/drawable/selected_bundle_background.xml
@@ -1,8 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#767676" />
+    <solid android:color="#2249D3" />
 
-    <corners android:radius="7dp" />
+    <corners
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp" />
 
 </shape>
