--- a/app/src/main/res/layout/activate_sim_dialog.xml
+++ b/app/src/main/res/layout/activate_sim_dialog.xml
@@ -47,16 +47,18 @@
             android:layout_marginTop="30dp"
             android:orientation="horizontal">
 
-            <androidx.appcompat.widget.AppCompatButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/yesBtn"
                 android:layout_width="0dp"
-                android:layout_height="45dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#E96614"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="0.5"
-                android:background="@drawable/orange_bg"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/yes_hint"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/noBtn"
