--- a/app/src/main/res/layout/confirm_purchase_dialog.xml
+++ b/app/src/main/res/layout/confirm_purchase_dialog.xml
@@ -67,12 +67,11 @@
             app:strokeColor="@color/orange"
             app:strokeWidth="1dp" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/confirmBtn"
             android:layout_width="0dp"
-            android:layout_height="55dp"
+            android:layout_height="65dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/orange_bg"
             android:fontFamily="@font/montserrat_extrabold"
             android:text="Oui"
             android:textAllCaps="false"
@@ -80,7 +79,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/description"
-            app:layout_constraintWidth_percent="0.45" />
+            app:layout_constraintWidth_percent="0.45"
+            android:backgroundTint="#E96614" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
