--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -122,7 +122,8 @@
                     android:layout_height="65dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:backgroundTint="#E96614"
+                    android:enabled="false"
+                    android:backgroundTint="@color/button_background_selector"
                     android:fontFamily="@font/montserrat_extrabold"
                     android:text="@string/login_btn"
                     android:textColor="@color/white"
