--- a/app/src/main/res/layout/help_item_layout.xml
+++ b/app/src/main/res/layout/help_item_layout.xml
@@ -6,32 +6,29 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/white_background"
-        android:elevation="5dp"
-        android:padding="15dp">
+        android:paddingVertical="10dp">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_regular"
-            android:includeFontPadding="false"
-            android:textColor="#333333"
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="@string/faq_title"
+            android:textColor="@color/blue"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Urgence &amp; dépannage" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="10dp"
-            android:src="@drawable/ic_goright"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/blue" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/faqRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            tools:itemCount="2"
+            tools:listitem="@layout/help_faq_item_layout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
