--- a/app/src/main/res/layout/recover_password_dialog.xml
+++ b/app/src/main/res/layout/recover_password_dialog.xml
@@ -66,17 +66,16 @@
             android:textColorHint="@color/black"
             android:textSize="14sp" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/okBtn"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="65dp"
             android:layout_marginHorizontal="70dp"
-            android:background="@drawable/orange_bg"
+            android:backgroundTint="#E96614"
             android:fontFamily="@font/montserrat_extrabold"
             android:text="@string/ok_btn"
             android:textAllCaps="true"
             android:textColor="@color/white" />
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
